# question-list-manager

./: .gitignore  CMakeLists.txt  README.md  bbb-deb-11-hello.cmake  main.cpp  start_ms_application.sh
GladeFiles/: QuestionListManager.glade
bbb-ms-dev-scripts/: README.md  bbb-ms-dev-environment-setup
bbb-ms-dev-scripts/bbb/: connect-to-internet  setup-bbb-env  vocabulary-words.json
bbb-ms-dev-scripts/host/: setup-host-env  tmux-dev-session.conf
bbb-ms-dev-scripts/vbox/: connect-to-internet  fix-symlinks-in-cloned-sysroot.py  rsync-staging-sysroot  setup-vbox-env
src/controller/: CMakeLists.txt  json-vocabulary-retriever.h  main.cpp  question-manager.cpp  question-manager.h  time-helper.cpp  time-helper.h  vocabulary-manager.cpp  vocabulary-manager.h  vocabulary-retriever.h
src/libs/: CMakeLists.txt  color-printer.cpp  color-printer.h  groq-sentence-fetcher.cpp  groq-sentence-fetcher.h  my-json-helper.cpp  my-json-helper.h  sentence-fetcher.cpp  sentence-fetcher.h
src/model/: CMakeLists.txt  json-vocabulary-retriever.cpp  json-vocabulary-retriever.h  vocab-item.h  vocabulary-retriever.cpp  vocabulary-retriever.h
src/view/: CMakeLists.txt  header-widget.cpp  header-widget.h  main-window.cpp  main-window.h  question-card.cpp  question-card.h  temp-widget.cpp  temp-widget.h  time-widget.cpp  time-widget.h
src/view/embedded-app/opengtk-version/: header.cpp  main-window.cpp  main-window.h  question-card.cpp  question-card.h  temp-widget.cpp  temp-widget.h  time-helper.cpp  time-helper.h  time-widget.cpp
